fix: ASC-00000 - css broken in v3 (#473)
* fix: css

* fix: css

--- a/src/v4/social/components/StoryTab/StoryTabCommunity.module.css
+++ b/src/v4/social/components/StoryTab/StoryTabCommunity.module.css
@@ -38,6 +38,7 @@
 }
 
 .storyAvatarContainer {
+  all: unset;
   position: absolute;
   top: 50%;
   left: 50%;
