--- a/src/v4/social/elements/OverflowMenuButton/OverflowMenuButton.module.css
+++ b/src/v4/social/elements/OverflowMenuButton/OverflowMenuButton.module.css
@@ -1,3 +1,4 @@
-.overflowMenuIcon {
+.overflowMenuButton {
+  all: unset;
   cursor: pointer;
 }
